--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "routing-player",
   "version": "0.0.1",
   "scripts": {
-    "dev": "rimraf ./dist && parcel watch src/index.html & live-server --port=8000 ./dist/ --entry-file=index.html",
+    "dev": "rimraf ./dist && parcel watch src/index.html --no-hmr & live-server --port=8000 ./dist/ --entry-file=index.html",
     "build": "rimraf ./dist && parcel build src/index.html"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
