--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "parcel": "^2.9.3",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "material-ripple-effects": "^2.0.1"
   }
 }
