--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@parcel/resolver-glob": "^2.9.3",
     "@parcel/transformer-sass": "^2.9.3",
     "@parcel/validator-typescript": "^2.9.3",
+    "buffer": "^6.0.3",
     "live-server": "^1.2.2",
     "parcel": "^2.9.3",
+    "process": "^0.11.10",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "firebase": "^12.4.0",
     "material-ripple-effects": "^2.0.1"
   }
 }
