--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "dev": "rimraf ./dist && rimraf ./.parcel-cache && parcel watch src/index.html --no-hmr & live-server --port=8000 ./dist/ --entry-file=index.html",
     "build": "rimraf ./dist && parcel build src/index.html"
   },
+  "alias": {
+    "@components/*": "./src/components/$1"
+    "@modules/*": "./src/modules/$1"
+  },
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
   "devDependencies": {
     "@parcel/resolver-glob": "^2.9.3",
