--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "build": "rimraf ./dist && parcel build src/index.html"
   },
   "alias": {
-    "@components/*": "./src/components/$1"
-    "@modules/*": "./src/modules/$1"
+    "@components/*": "./src/scripts/components/$1",
+    "@modules/*": "./src/scripts/modules/$1",
+    "@custom-elements/*": "./src/scripts/components/custom-elements/$1",
+    "@routing/*": "./src/scripts/modules/routing/$1",
   },
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
   "devDependencies": {
