--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@modules/*": "./src/scripts/modules/$1",
     "@custom-elements/*": "./src/scripts/components/custom-elements/$1",
     "@routing/*": "./src/scripts/modules/routing/$1",
+    "@types": "./src/scripts/types.ts",
+    "@mock-data": "./src/scripts/mock-data.ts",
   },
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
   "devDependencies": {
