--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "rimraf ./dist && rimraf ./.parcel-cache && parcel watch src/index.html --no-hmr & live-server --port=8000 ./dist/ --entry-file=index.html",
-    "build": "rimraf ./dist && parcel build src/index.html"
+    "build": "rimraf ./dist && parcel build src/index.html",
+    "check": "tsc --noEmit --watch"
   },
   "alias": {
     "@components/*": "./src/scripts/components/$1",
@@ -11,7 +12,7 @@
     "@custom-elements/*": "./src/scripts/components/custom-elements/$1",
     "@routing/*": "./src/scripts/modules/routing/$1",
     "@types": "./src/scripts/types.ts",
-    "@mock-data": "./src/scripts/mock-data.ts",
+    "@mock-data": "./src/scripts/mock-data.ts"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
   "devDependencies": {
