--- a/.parcelrc
+++ b/.parcelrc
@@ -1,7 +1,4 @@
 {
   "extends": "@parcel/config-default",
-  "resolvers": ["@parcel/resolver-glob", "..."],
-  "validators": {
-    "*.{ts,tsx}": ["@parcel/validator-typescript"]
-  }
+  "resolvers": ["@parcel/resolver-glob", "..."]
 }
