--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@modules/*": "./src/scripts/modules/$1",
     "@custom-elements/*": "./src/scripts/components/custom-elements/$1",
     "@routing/*": "./src/scripts/modules/routing/$1",
-    "@types": "./src/scripts/types.ts",
-    "@mock-data": "./src/scripts/mock-data.ts"
+    "@types111/": "./src/scripts/types.ts",
+    "@mock-data111/": "./src/scripts/mock-data.ts"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
   "devDependencies": {
