--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,15 @@
   "compilerOptions": {
     "target": "es2019",
     "module": "es2022",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "paths": {
+        "@components/*": ["./src/scripts/components/*"],
+        "@modules/*": ["./src/scripts/modules/*"],
+        "@custom-elements/*": ["./src/scripts/components/custom-elements/*"],
+        "@routing/*": ["./src/scripts/modules/routing/*"],
+        "@types1/*": ["./src/scripts/types.ts"],
+        "@mock-data1/*": ["./src/scripts/mock-data.ts"]
+    }
   }
 }
 
