--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "scripts": {
     "dev": "rimraf ./dist && rimraf ./.parcel-cache && parcel watch src/index.html --no-hmr & live-server --port=8000 ./dist/ --entry-file=index.html",
     "build": "rimraf ./dist && parcel build src/index.html",
-    "check": "tsc --noEmit --watch"
+    "check": "tsc --noEmit --watch",
+    "dev:playground": "rimraf ./dist && rimraf ./.parcel-cache && parcel watch playground/editorjs-example.html --no-hmr & live-server --port=8000 ./dist/ --entry-file=editorjs-example.html"
   },
-  
   "browserslist": "> 0.5%, last 2 versions, not dead, iOS 13",
   "devDependencies": {
     "@parcel/resolver-glob": "^2.9.3",
@@ -20,6 +20,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@editorjs/editorjs": "^2.31.3",
     "firebase": "^12.4.0",
     "material-ripple-effects": "^2.0.1"
   }
